Update country.html Title

--- a/country.html
+++ b/country.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Country
+title: Aviation Oversight Atlas - Country Information
 permalink: /country/
 ---
 <link rel="stylesheet" href="{{ '/assets/css/site.css' | relative_url }}">
